# Kulay

./: CMakeLists.txt  Makefile  ast.h  grammar.yy  i.txt  input.kul  instr.cpp  lexer.ll  nested_where.kul
ast/: add.cpp  add.h  ast.h  binop.h  block.h  decls.cpp  decls.h  defaultvisitor.h  expr.h  exprinstr.h  identifier.h  instr.cpp  instr.h  instrbody.h  interpretervisitor.h  intlit.h  mul.cpp  mul.h  print.h  sub.cpp  sub.h  varget.h  varset.cpp  varset.h
tests/: concept.kul  input.kul  nested_where.kul  scoping.kul
